--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -49,9 +49,11 @@ textarea {
     resize: vertical;
 }
 
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+figure {
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    width: 100%;
 }
