--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,96 +4,46 @@
 
 
 //== Colors
-//
-//## Gray and brand colors for use across Bootstrap.
+$green:					#27ae60;
+$light-grey:			#DADFE1;
 
 $brand-primary:         #428bca;
-$brand-success:         #5cb85c;
+$brand-success:         $green;
 $brand-info:            #5bc0de;
 $brand-warning:         #f0ad4e;
 $brand-danger:          #d9534f;
 
 
-//== Scaffolding
-//
-// ## Settings for some of the most global styles.
-
 //** Background color for `<body>`.
 $body-bg:               #fff;
 //** Global text color on `<body>`.
 $text-color:            #333;
-
 //** Global textual link color.
 $link-color:            $brand-primary;
 //** Link hover color set via `darken()` function.
 $link-hover-color:      darken($link-color, 15%);
 
-
-//== Typography
-//
-//## Font, line-height, and color for body text, headings, and more.
 @font-face {
-    font-family: 'quicksandbold';
-    src: url('../fonts/quicksand-bold-webfont.eot');
-    src: url('../fonts/quicksand-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/quicksand-bold-webfont.woff') format('woff'),
-         url('../fonts/quicksand-bold-webfont.ttf') format('truetype'),
-         url('../fonts/quicksand-bold-webfont.svg#quicksandbold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: 'gilroyextrabold';
+  src: url("../fonts/gilroy-extrabold-webfont.woff2") format("woff2"), url("fonts/gilroy-extrabold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal
 }
 
 @font-face {
-    font-family: 'quicksandlight';
-    src: url('../fonts/quicksand-light-webfont.eot');
-    src: url('../fonts/quicksand-light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/quicksand-light-webfont.woff') format('woff'),
-         url('../fonts/quicksand-light-webfont.ttf') format('truetype'),
-         url('../fonts/quicksand-light-webfont.svg#quicksandlight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: 'gilroylight';
+  src: url("../fonts/gilroy-light-webfont.woff2") format("woff2"), url("fonts/gilroy-light-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal
 }
 
 @font-face {
-    font-family: 'quicksandregular';
-    src: url('../fonts/quicksand-regular-webfont.eot');
-    src: url('../fonts/quicksand-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/quicksand-regular-webfont.woff') format('woff'),
-         url('../fonts/quicksand-regular-webfont.ttf') format('truetype'),
-         url('../fonts/quicksand-regular-webfont.svg#quicksandregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: 'PN-Bold';
+  src: url("../fonts/ProximaNova-Sbold.otf") format("opentype");
 }
 
+$sans-serif:  'gilroylight', Helvetica, Arial, sans-serif;
+$serif:       Georgia, "Times New Roman", Times, serif;
+$title:			'gilroyextrabold';
+$bold:       'PN-Bold';
 
-$font-family-sans-serif:  "quicksandLight", Helvetica, Arial, sans-serif;
-$font-family-serif:       Georgia, "Times New Roman", Times, serif;
-
-$font-size-base:          16px;
-$font-size-large:         ceil(($font-size-base * 1.25)); // ~18px
-$font-size-small:         ceil(($font-size-base * 0.85)); // ~12px
-
-$font-size-h1:            floor(($font-size-base * 1.5)); // ~20px
-$font-size-h2:            floor(($font-size-base * 1.25)); // ~18px
-$font-size-h3:            ceil(($font-size-base * 1.15)); // ~16px
-$font-size-h4:            ceil(($font-size-base * 1.15)); // ~16px
-$font-size-h5:            $font-size-base;
-$font-size-h6:            ceil(($font-size-base * 0.85)); // ~12px
-
-//** Unit-less `line-height` for use in components like buttons.
-$line-height-base:        1.428571429; // 20/14
-//** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-$line-height-computed:    floor(($font-size-base * $line-height-base)); // ~20px
-
-$susy: (
-  columns: 12,
-  gutters: 1/4,
-  math: fluid,
-  output: float,
-  gutter-position: after,
-  flow: ltr,
-  last-flow: from
-);
