--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,8 +13,12 @@
 @import "_variables.scss";
 
 //layout
-@import "susy/_su";
 @import "_layout.scss";
 @import "_header.scss";
+@import "_caption.scss";
+@import "_button.scss";
+@import "_nav.scss";
+@import "_typo.scss";
+@import "_section.scss";
 @import "_footer.scss";
 @import "_helpers.scss";
