--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -1,18 +1,28 @@
 .nav {
-	display: none;
+	position: fixed;
 	@include transition (all .3s ease-in-out);
 	z-index: 8888;
-	background-color: white;
+	background-color: rgba(250,250,250,.9);
+	width: 100%;
+	top: 80px;
+	text-align: center;
+	padding: 0 0 12px;
+	transform:translate(0px,-80px);
+	@include mq(tablet) {
+		padding: 0;
+	}
 	&.active {
-		display: block;
 		@include transition (all 1s ease-in-out);
+		transform:translate(0px,0px);
 	}
 	&__toggle {
-		position: relative;
+		position: absolute;
+		top: 0px;
+		right: -16px;
 		display: block;
 		width: 60px;
 		height: 60px;
-		color: $brand-primary;
+		color: #fff;
 		text-align: center;
 		line-height: 60px;
 		outline: 0;
@@ -25,24 +35,23 @@
 		span {
 			display: block;
 		  	position: absolute;
-		  	top: 20px;
+		  	top: 27px;
 		  	left: 16px;
 		  	right: 16px;
-		  	height: 2px;
-		  	background: $brand-primary;
+		  	height: 3px;
+		  	background: #fff;
 		  	transition: background 0s 0.3s;
 		  	&:before, &:after {
 		  		position: absolute;
 				display: block;
 				left: 0;
 				width: 100%;
-				height: 2px;
+				height: 3px;
 				background-color: #fff;
 				content: "";
 				transition-duration: 0.3s, 0.3s;
 				transition-delay: 0.3s, 0s;
 				transition-property: top, transform;
-				background: $brand-primary;
 		  	}
 		  	&:before {
 		  		top:-9px;
@@ -50,9 +59,7 @@
 		  	}
 		  	&:after {
 				bottom: -9px;
-				background: $brand-primary;
 		   		transition-property: bottom, transform;
-		   	
 		  	}
 		}
 		&.active {
@@ -79,11 +86,9 @@
 	&__menu {
 		position: relative;
 		width: 100%;
-		z-index: 8888;
-		float: left;
-		@include mq(mobile,tablet) {
-			top: 25%;
- 			transform: translateY(-25%);
+		@include mq(tablet) {
+			max-width: 1026px;
+			margin: 0 auto;
 		}
 	}
 	&__close {
@@ -108,16 +113,33 @@
 	&__item {
 		float: left;
 		width: 100%;
-		&:last-child .nav__link{
-			border-bottom: none;
+		@include mq(tablet) {
+			width: 25%;
+			&:last-child {
+				display: none;
+			}
+		}
+		&:last-child, &:nth-child(4) {
+			.nav__link{
+				border-bottom: none;
+			}
 		}
 	}
 	&__link {
 		display: block;
+		background: transparent;
 		padding: 20px 0;
-		width: 60%;
+		width: 100%;
 		margin: 0 auto;
-		border-bottom: 1px solid $body-bg;
+		border-bottom: 1px solid #ECF0F1;
+		color: #333;
 		@include transition (all .3s ease-in);
+		@include mq(tablet) {
+			border-bottom: none;
+			border-right: 1px solid #ECF0F1;
+		}
+		&:hover {
+			background: #FFF;
+		}
 	}
 }
