--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -7,9 +7,10 @@
 	top: 80px;
 	text-align: center;
 	padding: 0 0 12px;
-	transform:translate(0px,-80px);
+	transform:translate(0px,-100%);
 	@include mq(tablet) {
 		padding: 0;
+		transform:translate(0px,-80px);
 	}
 	&.active {
 		@include transition (all 1s ease-in-out);
