--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -4,7 +4,7 @@
     height: 38px;
     line-height: 38px;
     font-size: 16px;
-    font-family: $bold;
+    font-family: $semibold;
     letter-spacing: 2px;
     border: 1px solid transparent;
     border-radius: 19px;
