--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -7,7 +7,7 @@
 	}
 	&--hero {
 		margin-top: 80px;
-		height: 60vh;
+		height: 50vh;
 		background: url(../assets/build/desktop-beach.jpg) no-repeat center center fixed;
 		background-size: cover;
 		.caption {
@@ -22,10 +22,14 @@
 		}
 	}
 	&--text {
-		padding: 60px;
+		padding: 30px;
 		background: $light-grey;
-		font-size: 1.6em;
+		font-size: 1.2em;
 		line-height: 1.6;
+		@include mq(tablet) {
+			font-size: 1.6em;
+			padding: 60px;
+		}
 	}
 	&--split {
 		.section__inner {
