--- a/sass/_mq.scss
+++ b/sass/_mq.scss
@@ -35,6 +35,7 @@ $mq-breakpoints: (
     mobile:  320px,
     tablet:  740px,
     desktop: 980px,
+    deskmid: 1120px,
     wide:    1300px
 ) !default;
 
