--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,5 +20,6 @@
 @import "_nav.scss";
 @import "_typo.scss";
 @import "_section.scss";
+@import "_video.scss";
 @import "_footer.scss";
 @import "_helpers.scss";
