added landing page

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -18,9 +18,11 @@
 		}
 	}
 	&--video {
-		position: absolute;
-		width: 100%;
-		bottom: -340px;
+		@include mq(tablet) {
+			position: absolute;
+			width: 100%;
+			bottom: -340px;
+		}
 	}
 }
 .social {
