--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -8,6 +8,7 @@
 	text-align: center;
 	padding: 0 0 12px;
 	transform:translate(0px,-100%);
+	visibility: hidden;
 	@include mq(tablet) {
 		padding: 0;
 		transform:translate(0px,-80px);
@@ -15,6 +16,7 @@
 	&.active {
 		@include transition (all 1s ease-in-out);
 		transform:translate(0px,0px);
+		visibility: visible;
 	}
 	&__toggle {
 		position: absolute;
