--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -10,6 +10,7 @@
 	transform:translate(0px,-100%);
 	visibility: hidden;
 	@include mq(tablet) {
+		top: 0;
 		padding: 0;
 		transform:translate(0px,-80px);
 	}
@@ -21,7 +22,7 @@
 	&__toggle {
 		position: absolute;
 		top: 0px;
-		right: -16px;
+		right: 0;
 		display: block;
 		width: 60px;
 		height: 60px;
@@ -42,7 +43,7 @@
 		  	left: 16px;
 		  	right: 16px;
 		  	height: 3px;
-		  	background: #fff;
+		  	background: #333;
 		  	transition: background 0s 0.3s;
 		  	&:before, &:after {
 		  		position: absolute;
@@ -50,7 +51,7 @@
 				left: 0;
 				width: 100%;
 				height: 3px;
-				background-color: #fff;
+				background-color: #333;
 				content: "";
 				transition-duration: 0.3s, 0.3s;
 				transition-delay: 0.3s, 0s;
@@ -92,6 +93,7 @@
 		@include mq(tablet) {
 			max-width: 1026px;
 			margin: 0 auto;
+			z-index: 9999;														
 		}
 	}
 	&__close {
@@ -118,6 +120,9 @@
 		width: 100%;
 		@include mq(tablet) {
 			width: 25%;
+			 &:first-child {
+			 	visibility: hidden;
+			 }
 			&:last-child {
 				display: none;
 			}
@@ -138,6 +143,7 @@
 		color: #333;
 		@include transition (all .3s ease-in);
 		@include mq(tablet) {
+			padding: 26px 0;
 			border-bottom: none;
 			border-right: 1px solid #ECF0F1;
 		}
