--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -17,11 +17,11 @@
         }
 	}
     &--secondary {
-        border-color: #FFF;
-        color: #FFF;
+        border-color: #333;
+        color: #333;
         &:hover {
-            background-color: #FFF;
-            color: #333;
+            background-color: #333;
+            color: #FFF;
         }
         .nav & {
             border-color: #333;
