--- a/sass/_nav.scss
+++ b/sass/_nav.scss
@@ -16,8 +16,8 @@
 	}
 	&.active {
 		@include transition (all 1s ease-in-out);
-		transform:translate(0px,0px);
-		visibility: visible;
+	//	transform:translate(0px,0px);
+	//	visibility: visible;
 	}
 	&__toggle {
 		position: absolute;
