--- a/sass/_video.scss
+++ b/sass/_video.scss
@@ -15,6 +15,7 @@
       bottom: 0;
       width: 33vh;
       bottom: 30px;
+      background: rgba(250,250,250,.9);
       border-top-right-radius: 3px;
       border-bottom-right-radius: 3px;
     }
