--- a/sass/_section.scss
+++ b/sass/_section.scss
@@ -19,7 +19,7 @@
 			text-align: left;
 			font-size: 1.6em;
 			line-height: 1;
-			max-wdth: 1026px;
+			max-width: 1026px;
 			@include mq(deskmid) {
 				left: 50%;
 				margin-left: -513px;
