Landign page marigns

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -45,3 +45,11 @@
       bottom: 5px;
     }
 }
+.copyright {
+  font-size: 10px;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    color: #FFF;
+    letter-spacing: 1px;
+    text-align: center;
+}
