added footer credits

--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -43,6 +43,8 @@
       position: fixed;
       right: 0px;
       bottom: 5px;
+      text-align: right;
+      line-height: 1.6;
     }
 }
 .copyright {
