--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -1,5 +1,5 @@
 .modal {
-  display: none;
+  //display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -12,3 +12,16 @@
     background: rgba(0,0,0,.6);
   }  
 }
+
+form {
+  width: 440px + 60px;
+  margin: 200px auto 0;
+  background: #FFF;
+  box-shadow: 2px 2px 5px 1px rgba(0,0,0,0.2);
+  padding: 0 0 40px;
+  border-radius: 3px;
+  color: #ccc;
+  opacity: 1;
+  transform: translate(0%, 0%);
+  transition: all .6s ease-in;
+  }
