--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -6,6 +6,7 @@
 //== Colors
 $green:					       #27ae60;
 $light-grey:			     #DADFE1;
+$red:                   #B00020;
 
 $brand-primary:         #428bca;
 $brand-success:         $green;
