--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -8,6 +8,9 @@
     letter-spacing: 2px;
     border: 1px solid transparent;
     border-radius: 19px;
+    text-decoration: none;
+    text-transform: uppercase;
+    -webkit-transition: all 0.3s ease-in;
 	&--primary {
 		background-color: $green;
     	border-color: $green;
