--- a/sass/_mq.scss
+++ b/sass/_mq.scss
@@ -33,6 +33,7 @@ $mq-responsive: true !default;
 /// @link https://github.com/sass-mq/sass-mq#seeing-the-currently-active-breakpoint Full documentation and examples
 $mq-breakpoints: (
     mobile:  320px,
+    mobile-big:  540px,
     tablet:  740px,
     desktop: 980px,
     deskmid: 1120px,
