--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,7 +21,7 @@
 @import "_typo.scss";
 @import "_section.scss";
 @import "_modal.scss";
-//@import "_form.scss";
+@import "_form.scss";
 @import "_video.scss";
 @import "_footer.scss";
 @import "_helpers.scss";
