--- a/sass/_form.scss
+++ b/sass/_form.scss
@@ -7,6 +7,7 @@
   }
   form {
     width: 100%;
+    overflow: hidden;
   }
   .container {
       width: 100%;
@@ -43,7 +44,7 @@
   }
 
   label {
-    display: inline-block;
+    display: none;
     margin-bottom: .5rem;
     font-size: 16px;
   }
@@ -78,5 +79,18 @@
   }
   .with-errors {
     color: $red;
+  }
+}
+
+.messages {
+  .alert {
+    padding: 40px;
+    text-align: center;
+  }
+  .button {
+    display: block;
+    width: 90px;
+    margin: 20px auto 0;
+    outline: none;
   }
 }
